# ComfyUI-Sapiens2-Easy

./: .gitignore  LICENSE.md  README.ko.md  README.md  __init__.py  install.py  nodes.py  pyproject.toml  requirements.txt
docs/: GUIDE.ko.md  GUIDE.md
sapiens2_nodes/: __init__.py  advanced.py  albedo.py  constants.py  easy.py  folders.py  huggingface.py  inference.py  mappings.py  model_loading.py  normal.py  pointmap.py  pointmap_advanced.py  pose.py  processing.py  progress.py  segmentation.py  types.py  unified.py  utilities.py
sapiens2_nodes/configs/: rtmdet_m_640-8xb32_coco-person.py
web/: sapiens2.js
