[project]
name = "comfyui-sapiens2-easy"
description = "Easy ComfyUI custom nodes for Meta Sapiens2 segmentation, normal, pointmap, and pose workflows."
version = "1.0.2"
license = { file = "LICENSE.md" }
readme = "README.md"
dependencies = [
    "safetensors>=0.4.0",
    "huggingface_hub>=0.23.0",
    "opencv-python",
    "numpy",
    "pillow",
    "scipy",
    "matplotlib",
    "iopath",
    "prettytable",
    "termcolor",
    "accelerate",
    "rich",
    "transformers",
    "timm",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/Bogyie/ComfyUI-Sapiens2-Easy"

[tool.comfy]
PublisherId = "bogyie"
DisplayName = "ComfyUI-Sapiens2-Easy"
Icon = "" # TODO: Add an SVG, PNG, JPG, or GIF URL. Max 800x400px.
